base of c++ node

--- a/ros_modbus/CMakeLists.txt
+++ b/ros_modbus/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(ros_modbus_msgs REQUIRED)
 # main code is a node class + standalone executable
 add_executable(modbus_node src/modbus_node.cpp)
 target_include_directories(modbus_node PRIVATE include)
-add_subdirectory(src/Modbus)
+add_subdirectory(src/Modbus src/yaml-cpp)
 target_link_libraries(modbus_node ${rclcpp_LIBRARIES} Modbus)
 ament_target_dependencies(modbus_node std_msgs ros_modbus_msgs)
 
