--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ros_modbus/src/yaml-cpp"]
-	path = ros_modbus/src/yaml-cpp
-	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "ros_modbus/third-party/libmodbus"]
+	path = ros_modbus/third-party/libmodbus
+	url = https://github.com/stephane/libmodbus.git
