--- a/ros_modbus/CMakeLists.txt
+++ b/ros_modbus/CMakeLists.txt
@@ -16,13 +16,13 @@ find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(ros_modbus_msgs REQUIRED)
+find_library(modbus REQUIRED)
 
 # main code is a node class + standalone executable
 add_executable(modbus_node src/modbus_node.cpp)
 target_include_directories(modbus_node PRIVATE include)
 add_subdirectory(third-party/yaml-cpp)
-add_subdirectory(third-party/libmodbuspp)
-target_link_libraries(modbus_node ${rclcpp_LIBRARIES} yaml-cpp libmodbuspp)
+target_link_libraries(modbus_node ${rclcpp_LIBRARIES} yaml-cpp modbus)
 ament_target_dependencies(modbus_node std_msgs ros_modbus_msgs)
 
 
