mutex et on timer callback

--- a/ros_modbus_msgs/CMakeLists.txt
+++ b/ros_modbus_msgs/CMakeLists.txt
@@ -5,6 +5,6 @@ find_package(ament_cmake REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
-rosidl_generate_interfaces(${PROJECT_NAME} "msg/Modbus.msg" DEPENDENCIES std_msgs)
+rosidl_generate_interfaces(${PROJECT_NAME} "msg/Modbus.msg" "msg/State.msg" DEPENDENCIES std_msgs)
 
 ament_package()
