--- a/ros_modbus_msgs/package.xml
+++ b/ros_modbus_msgs/package.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" ?>
 <package format="3">
   <name>ros_modbus_msgs</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="todo@todo.todo">ecn</maintainer>
-  <license>TODO: License declaration</license>
+  <version>1.0.0</version>
+  <description>Basic messages used to communicate with a ros_modbus node and report it's state</description>
+
+  <author email="alexis.fetet@capacites.fr">Alexis Fetet</maintainer>
+  <maintainer email="julien.viaud@capacites.fr">Julien Viaud</maintainer>
+
+  <license>MIT</license>
 
   <!--
   <url type="website">TODO</url>
