--- a/ros_modbus_msgs/package.xml
+++ b/ros_modbus_msgs/package.xml
@@ -4,7 +4,7 @@
   <version>1.0.0</version>
   <description>Basic messages used to communicate with a ros_modbus node and report it's state</description>
 
-  <author email="alexis.fetet@capacites.fr">Alexis Fetet</maintainer>
+  <author email="alexis.fetet@capacites.fr">Alexis Fetet</author>
   <maintainer email="julien.viaud@capacites.fr">Julien Viaud</maintainer>
 
   <license>MIT</license>
