--- a/ros_modbus/conf.yaml
+++ b/ros_modbus/conf.yaml
@@ -8,20 +8,28 @@ test_device:
   publish_rate: 10 #Hz 
   refresh_rate: 100 #Hz 
   state_rate: 1 #Hz 
+    
+  connected_IO:
+    digital_input: 16
+    digital_output: 8
+    analog_input: 8
+    analog_output: 8
+    
+  offsets:
+    digital_input: 0
+    digital_output: 0
+    analog_input: 0
+    analog_output: 2048
       
   publish_on_timer: 
     - di_in_test1
     - di_in_test2
     - di_out_test1
+    - an_out_test1
+    - an_out_test2
   
   publish_on_event:
     - di_in_test1
-  
-  connected_IO:
-    digital_input: 16
-    digital_output: 8
-    analog_input: 0
-    analog_output: 0
 
   input:
     digital:
@@ -30,9 +38,11 @@ test_device:
       di_in_test5: 5
     analog:
       
+      
   output:
     digital:
       di_out_test1: 1
-      di_out_test6: 6
+      di_out_test2: 2
     analog:
-    
+      an_out_test1: 2
+      an_out_test2: 4
