--- a/ros_modbus/package.xml
+++ b/ros_modbus/package.xml
@@ -20,6 +20,8 @@
   <depend>std_msgs</depend>
   <depend>libmodbus</depend>
   <depend>ros_modbus_msgs</depend>
+  <depend>yaml-cpp</depend>
+  <depend>libmodbus-dev</depend>
   
   <export>
     <build_type>ament_cmake</build_type>
