cleaning and launch

--- a/ros_modbus/CMakeLists.txt
+++ b/ros_modbus/CMakeLists.txt
@@ -28,4 +28,8 @@ install(TARGETS modbus_node
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY
+  launch config
+  DESTINATION share/${PROJECT_NAME}/)
+
 ament_package()
